# cppread

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  conanfile.py  random_gen.sh
example/source/: bench.cpp  bufread.cpp  custom_type.cpp  main.cpp
include/cppread/: buf_read.hpp  common.hpp  parser.hpp  read.hpp  read_repeat.hpp  util.hpp
include/cppread/detail/: default_parser.hpp  for_each_tuple.hpp  line_reader.hpp  read.hpp  split.hpp
include/cppread/util/: for_each_tuple.hpp  split.hpp
include/linr/: buf_read.hpp  common.hpp  parser.hpp  read.hpp  util.hpp
include/linr/detail/: default_parser.hpp  line_reader.hpp  read.hpp
test/: CMakeLists.txt  test.list  test.py
test/source/: main.cpp
